[gd_scene load_steps=2 format=3 uid="uid://btvvjrpx7enn"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_2hlr7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hlr7")

[node name="MainBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 24

[node name="TitleLabel" type="Label" parent="MC"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="EndlessButton" type="Button" parent="MC/VBoxContainer"]
layout_mode = 2
text = "EndlessMode"

[node name="ArcadeButton" type="Button" parent="MC/VBoxContainer"]
layout_mode = 2
text = "ArcadeMode"

[node name="Credits" type="Button" parent="MC/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="MC/VBoxContainer/EndlessButton" to="." method="_on_endless_button_pressed"]
[connection signal="pressed" from="MC/VBoxContainer/ArcadeButton" to="." method="_on_arcade_button_pressed"]
[connection signal="pressed" from="MC/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
